--- a/src/RazorLight/RazorLight.csproj
+++ b/src/RazorLight/RazorLight.csproj
@@ -4,13 +4,13 @@
   </PropertyGroup>
     
   <PropertyGroup>
-    <PackageId>RazorLight</PackageId>
-    <Title>RazorLight</Title>
-    <Version>2.0.0-beta4.1</Version>
+    <PackageId>VerisLight</PackageId>
+    <Title>VerisLight</Title>
+    <Version>1.0.0</Version>
     <Description>Use Razor to build your templates from strings / files / EmbeddedResources outside of ASP.NET MVC for .NET Core</Description>
-    <Authors>toddams</Authors>
+    <Authors>toddams,tbullara,ADNewsom09</Authors>
     <PackageTags>RazorLight, razor, render, dotnet-core, dotnet, core, template-engine, email, emails</PackageTags>
-    <RepositoryUrl>https://github.com/toddams/RazorLight</RepositoryUrl>
+    <RepositoryUrl>https://github.com/ADNewsom09/RazorLight</RepositoryUrl>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <IncludeSymbols>true</IncludeSymbols>
